--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
 </head>
 <body>
     <div class="game-container">
-        <h1>Snake</h1>
+        <div class="header">
+            <h1>Snake</h1>
+            <button id="darkModeToggle" class="icon-button">🌙</button>
+        </div>
+        <div class="settings">
+            <select id="difficultySelect">
+                <option value="easy">Einfach</option>
+                <option value="medium">Mittel</option>
+                <option value="hard">Schwer</option>
+            </select>
+        </div>
         <canvas id="gameCanvas" width="400" height="400"></canvas>
         <div class="score">Punktzahl: <span id="score">0</span></div>
         <div class="controls">
             <button id="startButton">Spiel starten</button>
+        </div>
+        <div class="leaderboard">
+            <h2>Bestenliste</h2>
+            <div id="leaderboardList"></div>
         </div>
     </div>
     <script src="game.js"></script>
