--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
             <div id="leaderboardList"></div>
         </div>
     </div>
+    
+    <!-- Modal Dialog für Namenseingabe -->
+    <div id="nameModal" class="modal">
+        <div class="modal-content">
+            <h2>Gratulation!</h2>
+            <p>Du hast <span id="finalScore">0</span> Punkte erreicht!</p>
+            <div class="form-group">
+                <label for="playerName">Dein Name:</label>
+                <input type="text" id="playerName" placeholder="Gib deinen Namen ein" maxlength="20">
+            </div>
+            <div class="modal-buttons">
+                <button id="saveScoreBtn">Speichern</button>
+                <button id="skipScoreBtn">Überspringen</button>
+            </div>
+        </div>
+    </div>
+    
     <script src="game.js"></script>
 </body>
 </html> 
